--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,7 @@
 @import "blocks/_promo"
 @import "blocks/_header"
 @import "blocks/_buttons"
+@import "blocks/_benefits"
 
 * 
     font-family: 'Museo Sans Cyrl', sans-serif
