--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -18,3 +18,8 @@
         font-size: 16px
         font-weight: 500
         text-transform: uppercase
+    &_subbmit
+        width: 100%
+        height: 55px
+        border-radius: 5px
+        font-size: 16px
