--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,6 +3,9 @@
 @import "blocks/_header"
 @import "blocks/_buttons"
 @import "blocks/_benefits"
+@import "blocks/_titles"
+@import "blocks/_consultation"
+@import "blocks/_forms"
 
 * 
     font-family: 'Museo Sans Cyrl', sans-serif
