--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -12,14 +12,12 @@
         margin-top: 67px
         width: 300px
         height: 50px
-        border-radius: 5px
-        background-color: $main_color
-        color: #ffffff
         font-size: 16px
-        font-weight: 500
-        text-transform: uppercase
     &_subbmit
         width: 100%
         height: 55px
-        border-radius: 5px
         font-size: 16px
+    &_mini
+        width: 131px
+        height: 40px
+        font-size: 14px
