--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@
 @import "blocks/_forms"
 @import "blocks/_carousel"
 @import "blocks/_catalog"
+@import "blocks/_comments"
 
 * 
 	font-family: 'Museo Sans Cyrl', sans-serif
