--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -9,7 +9,7 @@
 @import "blocks/_carousel"
 @import "blocks/_catalog"
 @import "blocks/_comments"
-
+@import "blocks/_footer"
 * 
 	font-family: 'Museo Sans Cyrl', sans-serif
 
