--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,8 @@
 @import "blocks/_comments"
 @import "blocks/_footer"
 @import "blocks/_modal"
+@import "blocks/_pageup"
+@import "base/_media"
 * 
 	font-family: 'Museo Sans Cyrl', sans-serif
 
