--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -46,6 +46,8 @@
             div
                 width: 170px
 @media (max-width: 575px)
+    .title
+        font-size: 25px
     .promo
         &__header
             font-size: 29px
@@ -78,4 +80,15 @@
     .footer
         &__info
             width: 400px
-            
+    .feed-form_mt25
+        width: 200px
+    .modal
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50% , -50%)
+        width: 280px
+        min-height: 300px
+        background-color: #f2f2f2
+        padding: 38px 40px 40px 40px
+                
