--- a/src/sass/blocks/_pageup.sass
+++ b/src/sass/blocks/_pageup.sass
@@ -1,7 +1,7 @@
 .pageup
     display: block
     position: fixed
-    buttom: 40px
+    bottom: 40px
     right: 40px
     width: 40px
     height: 40px
