--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,14 @@
-@import "base/_variables"
+@import "libs/_bootstrap-reboot.min.scss"
+@import	"libs/_fonts.scss"
+@import "libs/_slick.scss"
+
+* 
+	font-family: 'Museo Sans Cyrl', sans-serif
+
+.container
+	max-width: 950px
+	margin: 0 auto
+
 @import "blocks/_promo"
 @import "blocks/_header"
 @import "blocks/_buttons"
@@ -12,10 +22,5 @@
 @import "blocks/_footer"
 @import "blocks/_modal"
 @import "blocks/_pageup"
+@import "base/_variables"
 @import "base/_media"
-* 
-	font-family: 'Museo Sans Cyrl', sans-serif
-
-.container
-	max-width: 950px
-	margin: 0 auto
